--- a/.github/workflows/deploy-infrastructure.yml
+++ b/.github/workflows/deploy-infrastructure.yml
@@ -39,7 +39,7 @@ jobs:
 
       - name: Upload infrastructure outputs to S3
         env:
-          BUCKET_NAME: "expensetrackerinfra"
+          BUCKET_NAME: "expensetrackerinfra9553839449@Rohith"
           INFRA_FILE_NAME: "infrastructure-outputs.json"
         run: |
           if ! aws s3api head-bucket --bucket-name "$BUCKET_NAME"; then
